--- a/style.css
+++ b/style.css
@@ -397,7 +397,9 @@ label {
     text-align: center;
 }
 
-
+.moreinfo{
+  text-align : center;
+}
 
 /*
  * -- PURE FORM STYLES --
@@ -640,13 +642,26 @@ a.pure-button-primary {
 /*Education*/
 /* Custom CSS styles for the image slider */
 .wrappereducation p{
-    color:red;
+    color:rgb(103, 3, 3);
+    text-align : center;
+}
+.wrappereducation h6,
+.wrappereducation h5{
+  color: rgb(7, 7, 147);
+  text-align : center;
+}
+
+.wrappereducation img{
+  padding-left : 350px;
 }
   
+.card-title,
+.card-text{
+  padding-left: 350px;
+}
 /*contact us*/
 .featurebox-contact{
     background-color: rgb(195, 166, 166);
     width: 200px;
     margin: auto;
-    
 }
